Opened 12 years ago
Closed 12 years ago
#10000 closed bug (fixed)
[HaikuDepot] Install button flickers
Reported by: | diver | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/HaikuDepot | Version: | R1/Package Management |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Install button flickers while moving through the list of packages using up/down arrow button.
Change History (3)
comment:1 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 12 years ago
Status: | assigned → in-progress |
---|
comment:3 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Fixed in pm branch, commit 34f4c3ec4f135fee3ff025ab530b0df11f267452.
Note:
See TracTickets
for help on using tickets.
That's because that bar is currently rebuilt each time you select another package, since the available actions will vary depending on location and state. Would need to tune it a bit to compare the current/previous action set and not clear itself if it hasn't changed.