HaikuDepot: Fix #10000.

- When switching selected packages, compare the new and old package action
  list. If they're the same, don't bother rebuilding the button bar.